Fix hidden overflow problem when hovering on cards

--- a/styles/scss/page.scss
+++ b/styles/scss/page.scss
@@ -267,10 +267,14 @@ footer {
 
   .shelf-items {
     display: grid;
-    overflow-y: hidden;
+    overflow: hidden;
     grid-template-columns: repeat(auto-fill, minmax(var(--card-min-width), 1fr));
     grid-template-rows: 1fr;
     grid-auto-rows: 0;
+
+    // fix hidden overflow problem when hovering on cards
+    margin: -$density-normal;
+    padding: $density-normal;
 
     > * {
       margin: $density-normal;
